Fixed all books grid spacing when less than 7 books are present

--- a/src/components/BookCollection/BookCollection.css
+++ b/src/components/BookCollection/BookCollection.css
@@ -1,6 +1,6 @@
 .all-books {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(204px, 1fr));
+  grid-template-columns: repeat(auto-fit, 204px);
   column-gap: 1vw;
   row-gap: 2vw;
   flex-direction: column;
